Fixing project-navigation alignment issue

--- a/_includes/project-navigation.html
+++ b/_includes/project-navigation.html
@@ -18,9 +18,11 @@
 {% if next.url %}
 <section class="next">
   <a href="{{next.url | remove: "index.html" }}">
-    <div class="wrap">
-      <h5 class="smallcaps">Next</h5>
-      <h2>{{next.title}}</h2>
+    <div>
+        <div class="wrap">
+            <h5 class="smallcaps">Next</h5>
+            <h2>{{next.title}}</h2>
+        </div>
     </div>
   </a>
 </section>
