--- a/r/css/style.scss
+++ b/r/css/style.scss
@@ -317,7 +317,7 @@ header a, footer nav a {
       left:0;
       background:white;
       color:#555;
-      margin:-1em 0 0 1em;
+      margin:-1em 0 0;
       padding:.5em 1em;
       white-space:nowrap;
       display:none;
