--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,7 @@
 {% assign current = page.url | downcase | split: '/' %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script>$('body').removeClass('no-jquery');</script>
 
 {% if current[1] == 'projects' %}
 <script type="text/javascript" src="/r/js/slick.min.js"></script>
