--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <html>
 {% include head.html %}
-<body>
+<body class="no-jquery">
 {% include header.html %}
 {{ content }}
 {% include footer.html %}
