Fixed Broken Julep image.

--- a/_includes/project-navigation.html
+++ b/_includes/project-navigation.html
@@ -17,6 +17,7 @@
 
 {% if next.url %}
 <section class="next">
+<div>
 <div class="wrap">
   <h5 class="text-small caps">Next</h5>
   <h2><span class="project-link" style="color:{{ next.color-headline }}">
@@ -31,6 +32,7 @@
       </span>
     </span>
   </h2>
+  </div>
   </div>
 </section>
 {% endif %}
