--- a/r/css/style.scss
+++ b/r/css/style.scss
@@ -125,6 +125,7 @@ header a, footer nav a {
 }
 
 .header-container {
+  height:$spacing * 3;
   min-height:$spacing * 3;
 }
 
@@ -151,9 +152,11 @@ header a, footer nav a {
 
   &-header {
     display:table;
+    height:calc(50vh - (#{$spacing} * 3));
     min-height:calc(50vh - (#{$spacing} * 3));
     padding:$spacing 0;
     width:100%;
+
 
     & > div {
       display:table-cell;
@@ -459,7 +462,6 @@ form.contact {
     outline:none;
     font-size:1rem;
     padding: 1.75em 0 0.5em 0;
-    height:3.25rem;
     background:transparent;
     color:currentColor;
 
