--- a/r/css/style.scss
+++ b/r/css/style.scss
@@ -291,8 +291,8 @@ header a, footer nav a {
     position:relative;
 
     .project-name {
-      padding: .25em .25em 0;
-      margin: -.25em;
+      padding: 1.5rem 1.5rem 1rem;
+      margin: -1.5rem;
     }
 
     &:hover {
@@ -320,7 +320,7 @@ header a, footer nav a {
 
     @media ($break-medium) {
       position:absolute;
-      top:100%;
+      top: calc(100% + 1rem);
       left:0;
       background:white;
       color:#555;
