--- a/r/css/_scss/_slick-theme.scss
+++ b/r/css/_scss/_slick-theme.scss
@@ -41,9 +41,8 @@ $slick-dot-size: 20px;
 }
 
 .gallery {
-    padding: 2rem 0 0 0;
-    margin-bottom: 2rem;
-    // overflow:visible;
+    padding: 2rem 0;
+    overflow:hidden;
 
     @media ($break-small) {
       padding: 5vw 0 2vw 0;
@@ -55,8 +54,6 @@ $slick-dot-size: 20px;
 	position: relative;
     display: block;
     max-width: $site-max-width;
-    margin: 0 auto !important;
-    padding: 0 $spacing*2 !important;
 }
 
 .slick-track {
@@ -65,20 +62,20 @@ $slick-dot-size: 20px;
 
 .slick-slide {
 	outline:none;
-	padding:0 .5rem;
+	padding:0 $spacing;
     position:relative;
 
-    @media ($break-small) {
-        padding: 0 1rem !important;
-    }
+    // @media ($break-small) {
+    //     padding: 0 1rem !important;
+    // }
 }
 
 .slick-slide img {
 	margin:0 auto;
-	// box-shadow: 0 20px 100px rgba(0, 0, 0, 0.2);
-    border:2px solid rgba(0,0,0,.1);
+    // border:2px solid rgba(0,0,0,.1);
     box-sizing:content-box;
 	max-width:100%;
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.1), 0 40px 100px rgba(0, 0, 0, 0.1);
 
     .iphone & {
         width:320px;
