--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,18 @@
 <html>
 {% include head.html %}
-<body class="no-jquery">
+{% assign current = page.url | downcase | split: '/' %}
+{% if page.url == "/"  %}
+	{% assign page-class = 'home' %}
+{% else %}
+	{% assign page-name = page.url | downcase | remove: 'projects' | remove: 'index.html' | split: '/' %} 
+	{% assign page-type = current[1] %}
+{% endif %}
+<body class="no-jquery page-{{ page-type }} {{ page-name }}">
+<div class="page-container">
 {% include header.html %}
 {{ content }}
 {% include footer.html %}
 {% include scripts.html %}
+</div>
 </body>
 </html>
