Center fix for images on home page

--- a/r/css/style.scss
+++ b/r/css/style.scss
@@ -210,6 +210,10 @@ a {
     opacity:0;
     pointer-events:none;
 
+    .wrap {
+      text-align:center;
+    }
+
   @media ($break-medium) {
 
     &-image {
