--- a/r/css/style.scss
+++ b/r/css/style.scss
@@ -34,11 +34,7 @@ body {
 }
 
 .page-container {
-  min-height:100%;
-
-  @media ($break-small) {
-    margin:1rem;
-  }
+  margin:1rem;
 }
 
 ::-webkit-scrollbar { 
@@ -76,6 +72,7 @@ a {
 
 .project-container {
   position:relative;
+  // overflow:hidden;
   margin-bottom:20rem; // height of .next
   box-shadow:0 20px 40px rgba(0,0,0,.8);
 }
@@ -100,7 +97,6 @@ a {
       align-items: flex-end;
       padding:$spacing*4 0 $spacing*2 0;
       width: 50%;
-      min-width: 35rem;
     }
 
     .page-projects & {
