--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,6 @@
     <li {% if current[1] == 'projects' or page.url == "/" %}class='current'{% endif %}><a href='/'>Work</a></li>
     <li {% if current[1] == 'about' %}class='current'{% endif %}><a href='/about'>About</a></li>
     <li {% if current[1] == 'contact' %}class='current'{% endif %}><a href='/contact'>Contact</a></li>
+    <li {% if current[1] == 'playground' %}class='current'{% endif %}><a href='/playground'>Playground</a></li>
   </ul>
 </nav>
