--- a/r/css/style.scss
+++ b/r/css/style.scss
@@ -21,12 +21,15 @@
 
 @import "contact-form";
 
+@import "inputs";
+
+@import "draggable";
+
 html,body {
 	min-height:100%;
 }
 
 body {
-	position: relative;
   background:black;
   max-width: 100vw;
   overflow: hidden;
